--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio | PedroH</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <header>
-        <figure class="header-logo">  
-            <img src="img/logo.png" alt="logo">
+        <figure class="header-logo">
+          <img src="img/logo.png" alt="logo" />
         </figure>
         <div class="header-links">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobre">Contato</a></li>
-                <li><a href="#projeto">Projeto</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sobre">Contato</a></li>
+            <li><a href="#projeto">Projeto</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
         </div>
     </header>
 
-    <main>
-
-    </main>
+    <main></main>
 
     <script src="script.js"></script>
-
-</body>
+  </body>
 </html>
