--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Portfolio | PedroH</title>
   </head>
   <body>
-    <header>
+    <header class="container">
         <figure class="header-logo">
-          <img src="img/logo.png" alt="logo" />
+          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
         </figure>
         <div class="header-links">
           <ul>
@@ -21,7 +21,11 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <sectiom id="home" class="container">
+            
+        </sectiom>
+    </main>
 
     <script src="script.js"></script>
   </body>
