--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
     </header>
 
     <main>
-        <sectiom id="home" class="container">
-            
+        <sectiom id="home" class="container-home">
+            <div class="home-info">
+              <span>👋 Olá, Meu nome é</span>
+              <h1>Pedro Henrique</h1>
+              <h4>Desenvolvedor Front-end</h4>
+            </div>
+
+            <figure class="home-img">
+              <img src="img/menino.png">
+            </figure>
         </sectiom>
     </main>
 
