--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
   </head>
   <body>
     <header class="container">
-        <figure class="header-logo">
-          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
-        </figure>
-        <div class="header-links">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#sobre">Contato</a></li>
-            <li><a href="#projeto">Projeto</a></li>
-            <li><a href="#contato">Contato</a></li>
-          </ul>
-        </div>
+      <figure class="header-logo">
+        <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
+      </figure>
+      <div class="header-links">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre">Contato</a></li>
+          <li><a href="#projeto">Projeto</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </div>
     </header>
-
+    <div class="img-de-fundo">
+      <img src="img/layered-waves-haikei.svg">
+    </div>
     <main>
-        <sectiom id="home" class="container-home">
-            <div class="home-info">
-              <span>👋 Olá, Meu nome é</span>
-              <h1>Pedro Henrique</h1>
-              <h4>Desenvolvedor Front-end</h4>
-            </div>
+      <sectiom id="home" class="container-home">
+        <div class="home-info">
+          <span>👋 Olá, Meu nome é</span>
+          <h1>Pedro Henrique</h1>
+          <h4>Desenvolvedor Front-end</h4>
+        </div>
 
-            <figure class="home-img">
-              <img src="img/menino.png">
-            </figure>
-        </sectiom>
+        <figure class="home-img">
+          <img src="img/menino.png" />
+        </figure>
+        
+      </sectiom>
     </main>
 
     <script src="script.js"></script>
