começando section projeto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio | PedroH</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header class="container" id="header-container">
       <section>
         <figure class="header-logo">
@@ -28,6 +29,7 @@
     </div>
 
     <main>
+      <!-- HOME -->
       <sectiom id="home" class="container-home">
         <section>
           <div class="home-info">
@@ -42,13 +44,13 @@
         </section>
       </sectiom>
 
+      <!-- SOBRE MIM -->
       <section id="sobre" class="container-sobre">
         <section>
           <div id="titulo-section">
             <h2>SOBRE MIM</h2>
             <h3>About me</h3>
           </div>
-
           <div class="conteudo-container">
             <figure>
               <img src="img/pedro.jpg" alt="foto-de-Pedor" />
@@ -78,6 +80,21 @@
           </div>
         </section>
       </section>
+
+      <!-- PROJETOS -->
+       <section id="projeto" class="container-projeto">
+        <section>
+          <div id="titulo-section">
+            <h2>PROJETO</h2>
+            <h3>Project</h3>
+          </div>
+
+          <div class="projeto-conteudo">
+            
+          </div>
+        </section>
+       </section>
+
     </main>
 
     <script src="script.js"></script>
