termirnar section project

--- a/index.html
+++ b/index.html
@@ -90,10 +90,37 @@
           </div>
 
           <div class="projeto-conteudo">
-            
+            <div class="card-container">
+              <article class="card-article">
+                <img src="img/Vem.svg" alt="em breve" class="card-img">
+                  <div class="card-data">
+                    <h3>Em breve</h3>
+                    <span>Atualmente, não tenho projetos finalizados, mas estou trabalhando em algumas ideias empolgantes e em breve terei novidades para compartilhar. Aguardem!</span>
+                    <a href="#" class="card-button">Ver mais</a>
+                  </div>
+              </article>
+              <article class="card-article">
+                <img src="img/Vem.svg" alt="em breve" class="card-img">
+                  <div class="card-data">
+                    <h3>Em breve</h3>
+                    <span>Atualmente, não tenho projetos finalizados, mas estou trabalhando em algumas ideias empolgantes e em breve terei novidades para compartilhar. Aguardem!</span>
+                    <a href="#" class="card-button">Ver mais</a>
+                  </div>
+              </article>
+              <article class="card-article">
+                <img src="img/Vem.svg" alt="em breve" class="card-img">
+                  <div class="card-data">
+                    <h3 class="card-titulo">Em breve</h3>
+                    <span class="card-descricao">Atualmente, não tenho projetos finalizados, mas estou trabalhando em algumas ideias empolgantes e em breve terei novidades para compartilhar. Aguardem!</span>
+                    <a href="#" class="card-button">Ver mais</a>
+                  </div>
+              </article>
+            </div>
           </div>
         </section>
        </section>
+
+
 
     </main>
 
