--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
        <!-- CONTATO -->
        <section id="contato" class="container-contato">
-        <section>
+        <section></section>
           <div id="titulo-contato">
             <h2>CONTATO</h2>
             <h3>Contact</h3>
           </div>
-
+          
           <div class="contato-conteudo">
             <div class="contato-email">
               <h4 class="form-titulo">Envia-me uma Mensagem</h4>
@@ -150,34 +150,20 @@
                   </div>
 
                   <div class="contato-box">
-                    <input type="text" name="objetivo" class="contato-input" id="objetivo" required placeholder="Qual seu Objetivo?">
+                    <input type="text" name="objetivo" class="contato-input" id="objetivo" required placeholder="Qual seu objetivo?">
                     <label for="objetivo" class="contato-label">Objetivo</label>
                   </div>
 
                   <div class="contato-box contato-area">
-                    <textarea name="mensagem" id="mensagem" required placeholder="Sua mensagem"></textarea>
-                    <label for="nome" class="contato-label">Mensagem</label>
+                    <textarea name="mensagem" id="mensagem" class="contato-input" required placeholder="Mensagem"></textarea>
+                    <label for="mensagem" class="contato-label">Mensagem</label>
                   </div>
 
                   <button type="submit" class="contato-button">
-                    <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/filled-sent.png" alt="filled-sent"/> Enviar Mensagem
+                    <img width="24" height="24" src="https://img.icons8.com/material-outlined/24/ffffff/filled-sent.png" alt="filled-sent"/> Enviar Mensagem
                   </button>
                 </div>
               </form>
-            </div>
-            <div class="contato-social">
-              <div class="contato-social-data">
-                <p class="contato-social-descricao-2">me siga nas minhas redes sociais</p>
-              </div>
-
-              <div class="contato-social-links">
-                <a href="www.linkedin.com/in/pedro-henrique-jesus-622743308" target="_blank" class="contato-social-link">
-                  <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/000000/linkedin.png" alt="linkedin"/>
-                </a>
-                <a href="https://github.com/Pedroh-dev01" target="_blank" class="contato-social-link">
-                  <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github"/>
-                </a>
-              </div>
             </div>
           </div>
         </section>
