--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-links">
           <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#sobre">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
             <li><a href="#projeto">Projeto</a></li>
             <li><a href="#contato">Contato</a></li>
           </ul>
