--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="conteudo-container">
             <figure>
-              <img src="img/pedro.jpg" alt="foto-de-Pedor" />
+              <img src="img/Eu.jpg" alt="PedroH" />
             </figure>
 
             <div class="sobre-info">
